# contract-negotiation-env

./: Dockerfile  README.md  baseline.py  env.py  evaluate.py  grader.py  index.html  inference.py  llm_agent.py  main.py  models.py  openenv.yaml  pyproject.toml  test_env.py
data/: easy.json  hard.json  medium.json
graders/: medium.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
