[project]
name = "contract-negotiation-env"
version = "0.1.0"
description = "Contract negotiation environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "contract-negotiation-env"
entry_point = "inference.py"
